objects/AVA_BLNG__Order_Line_Tax_Breakup__c.object
<CustomObject>
    <fields>
        <fullName>AVA_BLNG__Exempt_Amount__c</fullName>
        <label>Exempt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Juris_Name__c</fullName>
        <label>Jurisdiction</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Juris_Type__c</fullName>
        <label>Jurisdiction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Non_Taxable__c</fullName>
        <label>Non-Taxable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Line Tax Breakups</relationshipLabel>
        <relationshipName>Order_Line_Tax_Breakups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Rate__c</fullName>
        <label>Rate %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Tax_Name__c</fullName>
        <label>Tax Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVA_BLNG__Taxable_Amount__c</fullName>
        <label>Taxable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order Line Tax Breakup</label>
    <listViews>
        <fullName>AVA_BLNG__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LB-{00}</displayFormat>
        <label>Order Line Tax Breakup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Line Tax Breakups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>